i18n // Fix Nihongo localization regarding the full stamina state.

--- a/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
+++ b/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
@@ -11779,7 +11779,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "原神の天然樹脂、スターレイルの開拓力、ゼンレスゾンゼロのエネルギーを全部含む通知です。ご設定済みの閾値に関する通知の他には、スタミナが満載の時にも通知が来ます。"
+            "value" : "原神の天然樹脂、スターレイルの開拓力、ゼンレスゾンゼロのエネルギーを全部含む通知です。ご設定済みの閾値に関する通知の他には、スタミナが全回復の時にも通知が来ます。"
           }
         },
         "ko" : {
@@ -12007,7 +12007,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "スタミナが満載の時にも通知が来ます。"
+            "value" : "スタミナが全回復の時にも通知が来ます。"
           }
         },
         "ko" : {
