--- a/Packages/PZKit/Sources/PZAccountKit/Resources/Localizable.xcstrings
+++ b/Packages/PZKit/Sources/PZAccountKit/Resources/Localizable.xcstrings
@@ -2255,7 +2255,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "「%1$@」のスタミナは現在%2$@點です。%3$@まで満載予定。"
+            "value" : "「%1$@」のスタミナは現在%2$@点です。%3$@まで全回復予定。"
           }
         },
         "ko" : {
@@ -2331,7 +2331,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "「%@」のスタミナは満載になりました。"
+            "value" : "「%@」のスタミナは全回復になりました。"
           }
         },
         "ko" : {
