--- a/WidgetExtension/Localizable.xcstrings
+++ b/WidgetExtension/Localizable.xcstrings
@@ -5470,7 +5470,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "%@ 満載"
+            "value" : "%@ 全回復"
           }
         },
         "ko" : {
